Bug 442474 - The first brush tip of ABR-Files isn't loaded
Summary: The first brush tip of ABR-Files isn't loaded
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-15 11:28 UTC by Michael Strothotte
Modified: 2021-09-27 19:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Strothotte 2021-09-15 11:28:52 UTC
The observed error is that the first Brush Tip of an ABR file is not loaded, all other Brush Tips contained in the ABR file are displayed and available.  It doesn't matter if the ABR files are located in subdirectories of Kritas resource folder "brushes" or directly in "brushes". 
I have already reported this on Krita-Artists.org (1st test & 3rd test in that report), the report can be found here: 
https://krita-artists.org/t/help-krita-improve-with-structured-beta-testing-of-the-new-resource-system-in-krita-5-0/28779/25

Here is the compact version to reproduce it: 

1. get an ABR file and check its content (with abrMate, abrViewr.NET, Argus Preset Viewer, GIMP or Photoshop). 

2. import the previously checked ABR file into Krita using one of the options available for this purpose: 
  a. Settings >> Manage Resources Libraries... >> Import 
  b. Settings >> Manage Resources... >> Import Resources 
  c. Import using the Import button in the Brush Editor 
  d. or copy the ABR file with a file manager into the resource folder "brushes" or a subfolder of it before opening Krita.

3. open the Brush Editor in Krita and check if the first Brush Tip of the respective ABR file is displayed in the Brush Editor. 

Observed result: 
The first brush tip of each tested ABR file is not displayed.
I checked this several times with version 5.0.0-beta1 (git 7f1fe37) and once with version 5.0.0-beta1. 

Expected result: 
All included Brush Tips should be displayed and usable. 

#################


This is my first bug report and so it is probably not perfect. 
Bug 409786 could not load Brush Tips at all, bug 335463 was probably a user error, bug 302543 seems to be a comprehension error regarding the function or usability of ABR files in Krita, otherwise I could not find any bug like this via search.
If there are questions left, feel free to mail me via michelist.tracksbugs@yahoo.com  (but it may take some time for me to answer).

Michelist

#################

Additional Info: 

The used ABR files can be downloaded here for free if you like to check it with them: 

https://www.deviantart.com/andrei-oprinca/art/Flying-birds-brushes-336837084
https://resources.psdbox.com/downloads/animal-brushes-pack
https://resources.psdbox.com/downloads/tree-brushes-pack
https://www.brusheezy.com/brushes/58812-3-set-of-eyes-for-character-doodles-brushes


My exact system configuration: 

Krita

 Version: 5.0.0-beta1 (git 7f1fe37)
 Languages: en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, de_DE, de, en_US, en
 Hidpi: true

Qt

  Version (compiled): 5.12.11
  Version (loaded): 5.12.11

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.18363
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10

OpenGL Info
 
  Vendor:  "ATI Technologies Inc." 
  Renderer:  "Radeon RX 580 Series" 
  Version:  "3.0.13596 Compatibility Profile Context 20.10.35.02 27.20.1034.6" 
  Shading language:  "4.60" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 1, colorSpace QSurfaceFormat::sRGBColorSpace, profile  QSurfaceFormat::NoProfile) 
     Version: 3.0
     Supports deprecated functions true 
     is OpenGL ES: false 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsAngleD3D11: true 
  isQtPreferAngle: true 

Hardware Information

  GPU Acceleration: desktop
  Memory: 98227 Mb
  Number of Cores: 24
  Swap Location: D:/_TEMP

Current Settings

  Current Swap Location: D:/_TEMP
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 200
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 900
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Display Information
Number of screens: 2
	Screen: 0
		Name: \\.\DISPLAY1
		Depth: 32
		Scale: 1
		Resolution in pixels: 1920x1080
		Manufacturer: 
		Model: 
		Refresh Rate: 60
	Screen: 1
		Name: \\.\DISPLAY2
		Depth: 32
		Scale: 1
		Resolution in pixels: 1920x1080
		Manufacturer: 
		Model: 
		Refresh Rate: 50

Current Settings

  Current Swap Location: D:/_TEMP
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 200
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 900
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Current Settings

  Current Swap Location: D:/_TEMP
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 200
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 900
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false



---------------------
Comment 1 Tiar 2021-09-24 16:09:20 UTC
Git commit 0a92c5476ef83c8b941c287261f06815f9ab5f8c by Agata Cacko.
Committed on 24/09/2021 at 16:08.
Pushed by tymond into branch 'master'.

Fix first brush from ABR file not showing up

Before this commit, first brush tip from the ABR file wouldn't show
up in Resource Manager or brush tip chooser. That was because of
the mistake in iterating over the resources in KisAbrStorage.
This commit fixes the iteration and now all of the brush tips
appear correctly.

M  +3    -5    libs/brush/KisAbrStorage.cpp

https://invent.kde.org/graphics/krita/commit/0a92c5476ef83c8b941c287261f06815f9ab5f8c
Comment 2 Tiar 2021-09-27 19:50:52 UTC
Git commit 30840c0064be693e10cfc1999c2f148f97eeacb4 by Agata Cacko.
Committed on 27/09/2021 at 19:50.
Pushed by tymond into branch 'krita/5.0'.

Fix first brush from ABR file not showing up

Before this commit, first brush tip from the ABR file wouldn't show
up in Resource Manager or brush tip chooser. That was because of
the mistake in iterating over the resources in KisAbrStorage.
This commit fixes the iteration and now all of the brush tips
appear correctly.

M  +3    -5    libs/brush/KisAbrStorage.cpp

https://invent.kde.org/graphics/krita/commit/30840c0064be693e10cfc1999c2f148f97eeacb4