Fix first brush from ABR file not showing up

Before this commit, first brush tip from the ABR file wouldn't show
up in Resource Manager or brush tip chooser. That was because of
the mistake in iterating over the resources in KisAbrStorage.
This commit fixes the iteration and now all of the brush tips
appear correctly.

BUG:442474